--- a/.stdlib.yaml
+++ b/.stdlib.yaml
@@ -2,6 +2,6 @@ tests:
   # Here goes a list of tests you are ready to run.
   # It is expected to be a YAML sequence of strings.
   #- cmp
-  - matrix
+  #- matrix
   - primes
   #- ...
