--- a/.stdlib.yaml
+++ b/.stdlib.yaml
@@ -12,5 +12,8 @@ tests:
   #- nthelement
   #- firstn
   #- bitset
-  - treebalanced
+  #- treebalanced
   #- treeinorder
+  - treesym
+  #- treeserialise
+  #- treenoleft
