--- a/.stdlib.yaml
+++ b/.stdlib.yaml
@@ -14,6 +14,7 @@ tests:
   #- bitset
   #- treebalanced
   #- treeinorder
-  - treesym
+  #- treesym
   #- treeserialise
   #- treenoleft
+  - graph
